--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sqlite3": "^5.0.0",
     "stack": "^0.1.0",
     "utf8": "^3.0.0"
